--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
     <link rel="stylesheet" href="main.css">
-    <title>Responsive porfolio</title>
+    <title>my Responsive porfolio</title>
 </head>
 
 <body>
@@ -153,7 +153,26 @@
                 <p>Website pages contain Different categories of food, popular foods, Menu and Order , login ,logout ,
                     signup using add and clear in local storage ,Using <span> HTML,CSS ,SCSS and JavaScript</span> </p>
             </div>
-
+            <div class="box">
+                <div class="image">
+                    <img src="imgs/adminPanal.JPG" alt="">
+                    <div class="overlay"></div>
+                </div>
+                <a href="https://admin-panal.vercel.app/">ِAmin panal<i
+                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <p>Responsive admin panel contains statistics , charts , chat ,crud table build with <span>
+                        HTML5, CSS , TAILWIND , VueJS, Api.</span> </p>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="imgs/weatherApp.JPG" alt="">
+                    <div class="overlay"></div>
+                </div>
+                <a href="https://hayaahmed.github.io/crowdfunding-product-page-main">Weather App <i
+                        class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <p> Responsive web page gets the Weather temperature , status of any city Using<span>
+                        HTML5,SCSS , Api and VueJS</span> </p>
+            </div>
             <div class="box">
                 <div class="image">
                     <img src="imgs/Croudfunding.JPG" alt="">
@@ -163,10 +182,10 @@
                         class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 <p> Responsive website : that you can Make a selection of which pledge to make ,See an updated progress
                     bar and total money raised based on their pledge total after confirming a pledge ,See the number of
-                    total backers increment by one after confirming a pledge ,Toggle whether or not the product is
-                    bookmarked Using <span>
+                    total backers increment by one after confirming a pledge Using<span>
                         HTML5,CSS and VueJS</span> </p>
             </div>
+
         </div>
     </section>
     <section class="contact" id="contact">
