new changes added

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <img src="imgs/adminPanal.JPG" alt="">
                     <div class="overlay"></div>
                 </div>
-                <a href="https://admin-panal.vercel.app/">ِAdmin Panal<i
+                <a href="https://admin-dashboard-pi-one.vercel.app/">ِAdmin Panal<i
                         class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 <p>Responsive admin panel contains statistics , charts , chat ,crud table build with <span>
                         HTML5, CSS , TAILWIND , VueJS, Api.</span> </p>
